@@ -1,5 +1,6 @@
 0.05
  - Fix connection between 'Красный проспект' and 'Сибирская'.
+ - Improve LICENSE AND COPYRIGHT section in doc.
  - Improve SYNOPSIS section in doc.
 
 0.04 2025-01-23T11:27:31+01:00
